Remove quick action menu